Increase width of the course grade label to avoid wrapping of text. And soften the out-of text so the mark stands out more.

--- a/tool/src/webapp/styles/gradebook-grades.css
+++ b/tool/src/webapp/styles/gradebook-grades.css
@@ -815,6 +815,9 @@ ul.feedbackPanel li span {
   margin-top: 20px;
   padding-top: 20px;
 }
+.gb-summary-grade-score-outof {
+  color: #999;
+}
 .gb-summary-grade-panel .gb-summary-category-row td:first-child {
   font-weight: bold;
 }
